--- a/cookbook/examples/master-roshi/config.agent.yaml
+++ b/cookbook/examples/master-roshi/config.agent.yaml
@@ -76,3 +76,16 @@ tools:
 llm:
   provider: mistral
   model: devstral-small-2507
+
+
+server:
+  security:
+    enable_auth: true
+    auth_type: jwt
+    jwt_secret_key: "$JWT_SECRET_KEY"
+    
+    enable_rate_limiting: true
+    rate_limit: "50/minute"
+    
+    enable_csrf_protection: true
+    csrf_secret_key: "$CSRF_SECRET_KEY"
